# onesec-forwarding-address

./: .gitignore
forwarding-address/: Cargo.toml  build.sh
forwarding-address/src/: lib.rs
onesec-bridge/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
onesec-bridge/scripts/: docs.mjs  update-version.mjs
onesec-bridge/src/: bridge.ts  config.ts  evm.ts  forwarding.spec.ts  forwarding.ts  fromCandid.ts  getTransfers.ts  icp.ts  index.spec.ts  index.ts  testUtils.spec.ts  testUtils.ts  toCandid.ts  types.ts  utils.ts
onesec-bridge/src/bridge/: baseStep.ts  confirmBlocksStep.ts  fetchFeesAndCheckLimitsStep.ts  index.ts  shared.ts
onesec-bridge/src/bridge/evm-to-icp/: approve-step.ts  approveStep.ts  burn-step.ts  burnStep.ts  index.ts  lock-step.ts  lockStep.ts  validate-receipt-step.ts  validateReceiptStep.ts  wait-for-icp-tx.ts  waitForIcpTx.ts
onesec-bridge/src/bridge/evm-to-icp/forwarding/: computeForwardingAddressStep.ts  notifyForwardingPaymentStep.ts  notifyPaymentToForwardingAddressStep.ts  validateForwardingReceiptStep.ts  waitForForwardingTxStep.ts
onesec-bridge/src/bridge/icp-to-evm/: approve-step.ts  approveStep.ts  index.ts  resumeIcpToEvm.ts  resumeValidateReceiptStep.ts  resumeWaitForTxStep.ts  transfer-step.ts  transferStep.ts  validate-receipt-step.ts  validateReceiptStep.ts  wait-for-tx-step.ts  waitForTxStep.ts
