[package]
name = "forwarding-address"
version = "0.1.0"
edition = "2021"

[features]
default = ["js"]
js = ["dep:getrandom"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
ic-ethereum-types = { git = "https://github.com/dfinity/ic.git", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
ic-secp256k1 = "0.1.0"
ic-sha3 = { git = "https://github.com/dfinity/ic.git", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
getrandom = { version = "0.2", features = ["custom"], optional = true }

[dev-dependencies]
candid = "0.10.14"
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "5128134d24b7a5b8e24a3d5d40c4cce9d81fd375" }
